# pypolymix

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/workflows/: docs-release.yml  github-release-on-tag.yml  publish-on-tag.yml
ack/: index.html
api/: index.html
docs/: ack.md  api.md  index.md  theo.md
docs/examples/: custom_priors.ipynb  full_covariance.ipynb  langevin_pce.ipynb  langevin_pce_energy.ipynb  langevin_pce_energy_pce.ipynb  langevin_pce_energy_pce_squared_exponential.ipynb  langevin_pce_score_pce.ipynb  langevin_score_pce.ipynb  low_rank_covariance.ipynb  moe.ipynb  nn.ipynb  pce.ipynb
examples/custom_priors/: index.html
examples/full_covariance/: index.html
examples/langevin_pce/: index.html
examples/low_rank_covariance/: index.html
examples/moe/: index.html
examples/nn/: index.html
examples/pce/: index.html
src/pypolymix/: __init__.py  stochastic_model.py
src/pypolymix/parameter_groups/: __init__.py  base.py  deterministic.py  gaussian.py  langevin.py
src/pypolymix/priors/: __init__.py  base.py  common.py
src/pypolymix/surrogate_models/: __init__.py  base.py  mixture.py  neural_network.py  polynomial_chaos.py
stylesheets/: extra.css
theo/: index.html
